--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.2",
+    "react-scroll-parallax": "^2.4.2",
     "smooth-scroll": "^16.1.3"
   },
   "scripts": {
